[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "r0b0"
description = "Library for connecting hardware and software, like aconnect for anything."
authors = [{ name = "Michael Suguitan", email = "m.jp.sgtn@icloud.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
dynamic = ["version"]
requires-python = "==3.12.*"
dependencies = [
    "scipy>=1.16.0",
]

# [project.urls]
# Repository = "https://github.com/msgtn/r0b0.git"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/requirements.txt"] }
# optional-dependencies.robot = { file = ["requirements/robot.txt"] }
# optional-dependencies.chatbot = { file = ["requirements/chatbot.txt"] }

[tool.ruff]
line-length = 80
select = ['F401']
