[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "r0b0"
description = "Library for connecting hardware and software, like aconnect for anything."
authors = [{ name = "Michael Suguitan", email = "m.jp.sgtn@icloud.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
dynamic = ["version"]
requires-python = "==3.10.*"
dependencies = [
    "aiohttp>=3.12.14",
    "eventlet>=0.40.2",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "numpy>=2.2.6",
    "pyserial>=3.5",
    "python-engineio>=4.12.2",
    "python-socketio>=5.13.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "scipy>=1.15.0",
    "urllib3>=2.5.0",
    "websocket-client>=1.8.0",
    "werkzeug>=3.1.3",
]

[project.urls]
Repository = "https://github.com/msgtn/r0b0.git"

[project.scripts]
blsm = "r0b0.ros2.blsm:main"
page = "r0b0.ros2.page:main"
robot = "r0b0.ros2.robot:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/requirements.txt"] }

[tool.ruff]
line-length = 80
select = ['F401']
